# app/Http/Controllers/API/MedicineController.php
@@ -19,29 +19,135 @@ class MedicineController extends Controller
      *      operationId="index",
      *      @OA\Response(
      *          response=200,
-     *          description="Data returned successfully"
-     *      )
+     *          description="Data returned successfully",
+     *          @OA\JsonContent()
+     *      ),
+     *      @OA\Parameter(
+     *          name="_page",
+     *          in="query",
+     *          description="Current page of listing",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64",
+     *              example=1
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_limit",
+     *          in="query",
+     *          description="Max item displayed in a page",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64",
+     *              example=10
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_search",
+     *          in="query",
+     *          description="Search medicine or supplier",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_supplier",
+     *          in="query",
+     *          description="Search a supplier by name",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_sort_by",
+     *          in="query",
+     *          description="Sort item based on selected parameter",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *              example="stock"
+     *          )
+     *      ),
      * )
      */
-    public function index() {
-        $all_medicines = Medicine::select(
-            'medicines.*',
-            'suppliers.name as supplier',
-            'medicine_type.name as medicine_type'
-        )
-        ->join('medicine_type', 'medicines.type_id', '=', 'medicine_type.id')
-        ->join('suppliers', 'medicines.supplier_id', '=', 'suppliers.id')
-        ->get();
+    public function index(Request $request) {
+       
+        try {
+            $data['filter']         = $request->all();
+            $page                   = $data['filter']['_page'] = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit                  = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset                 = ($page ? ($page - 1) * $limit : 0);
 
-        // Unset type_id and supplier_id from each medicine object
-        $all_medicines->transform(function ($medicine) {
-            unset($medicine->type_id);
-            unset($medicine->supplier_id);
-            
-            return $medicine;
-        });
+            $data['products'] = Medicine::select(
+                'medicines.id',
+                'medicines.name',
+                'medicines.description',
+                'suppliers.name as supplier',
+                'medicine_type.name as medicine_type',
+                'medicines.stock',
+                'medicines.price',
+                'medicines.created_at',
+                'medicines.created_by',
+                'medicines.updated_at',
+                'medicines.updated_by'
+            )
+            ->join('suppliers', 'medicines.supplier_id', '=', 'suppliers.id')
+            ->join('medicine_type', 'medicines.type_id', '=', 'medicine_type.id')
+            ->whereRaw('1 = 1');
 
-        return response()->json($all_medicines);
+            // If filter by search
+            if ($search = $request->get('_search')) {
+                $data['products'] = $data['products']->where(function($q) use ($search) {
+                    $q->where('medicines.name', 'LIKE', '%' . strtolower($search) . '%')
+                      ->orWhere('suppliers.name', 'LIKE', '%' . strtolower($search) . '%');
+                });
+            }
+
+            // If filter by supplier
+            if ($supplierName = $request->get('_supplier')) {
+                $data['products'] = $data['products']->where('suppliers.name', 'LIKE', '%' . strtolower($supplierName) . '%');
+            }
+
+            // Sorting
+            if ($sortBy = $request->get('_sort_by')) {
+                switch ($sortBy) {
+                    default:
+                    case 'stock':
+                        $data['products'] = $data['products']->orderBy('medicines.stock', 'DESC');
+                        break;
+                    case 'latest_added':
+                        $data['products'] = $data['products']->orderBy('medicines.created_at', 'DESC');
+                        break;
+                    case 'name_asc':
+                        $data['products'] = $data['products']->orderBy('medicines.name', 'ASC');
+                        break;
+                    case 'name_desc':
+                        $data['products'] = $data['products']->orderBy('medicines.name', 'DESC');
+                        break;
+                    case 'price_asc':
+                        $data['products'] = $data['products']->orderBy('medicines.price', 'ASC');
+                        break;
+                    case 'price_desc':
+                        $data['products'] = $data['products']->orderBy('medicines.price', 'DESC');
+                        break;
+                }
+            }
+
+            $data['products_count_total'] = $data['products']->count();
+            $data['products'] = ($limit == 0 && $offset == 0) ? $data['products'] : $data['products']->limit($limit)->offset($offset);
+            $data['products'] = $data['products']->get();
+            $data['products_count_start'] = ($data['products_count_total'] == 0 ? 0 : (($page - 1) * $limit) + 1);
+            $data['products_count_end'] = ($data['products_count_total'] == 0 ? 0 : (($page - 1) * $limit) + sizeof($data['products']));
+
+            return response()->json($data, 200);
+
+        } catch (\Exception $exception) {
+            throw new HttpException(400, "Invalid Data - {$exception->getMessage()}");
+        }
     }
 
     /* ----- SWAGGER OA --------- */
@@ -92,7 +198,7 @@ class MedicineController extends Controller
             return $new_medicine;
             
         } catch (\Exception $exception) {
-            throw new HttpException(400, "Invalid data - {$exception->getMessage()}");
+            throw new HttpException(400, "Invalid Data - {$exception->getMessage()}");
         }
     }
 
@@ -130,7 +236,23 @@ class MedicineController extends Controller
      * )
      */
     public function show($id) {
-        $medicine = Medicine::find($id);
+        $medicine = Medicine::select(
+            'medicines.id',
+            'medicines.name',
+            'medicines.description',
+            'suppliers.name as supplier',
+            'medicine_type.name as medicine_type',
+            'medicines.stock',
+            'medicines.price',
+            'medicines.created_at',
+            'medicines.created_by',
+            'medicines.updated_at',
+            'medicines.updated_by'
+        )
+        ->join('suppliers', 'medicines.supplier_id', '=', 'suppliers.id')
+        ->join('medicine_type', 'medicines.type_id', '=', 'medicine_type.id')
+        ->where('medicines.id', $id)
+        ->first();
 
         if (!$medicine) {
             throw new HttpException(404, 'Medicine not found');
